common/src/parser.output
Nonterminals useless in grammar

   function_declaration
   initializer_list


Rules useless in grammar

  224 function_declaration: declaration_specifiers declarator parameter_list ';'

  225 initializer_list: initializer
  226                 | initializer_list ',' initializer


Rules useless in parser due to conflicts

  118 argument_expression_list: assignment_expression

  137 type_qualifier: CONST
  138               | VOLATILE

  175 labeled_statement: labeled_statement_name ':' labeled_internal_list


State 15 conflicts: 28 reduce/reduce
State 16 conflicts: 28 reduce/reduce
State 57 conflicts: 1 shift/reduce
State 117 conflicts: 11 reduce/reduce
State 132 conflicts: 1 shift/reduce, 2 reduce/reduce
State 225 conflicts: 7 reduce/reduce
State 234 conflicts: 3 reduce/reduce
State 279 conflicts: 2 reduce/reduce
State 307 conflicts: 25 shift/reduce, 29 reduce/reduce
State 341 conflicts: 1 shift/reduce
State 343 conflicts: 25 shift/reduce
State 350 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator parameter_list compound_statement
    6                    | declaration_specifiers declarator compound_statement
    7                    | declarator parameter_list compound_statement
    8                    | declarator compound_statement

    9 declaration: declaration_specifiers ';'
   10            | declaration_specifiers init_declarator_list ';'
   11            | init_declarator_list ';'

   12 declaration_specifiers: storage_class_specifier
   13                       | storage_class_specifier declaration_specifiers
   14                       | type_specifier
   15                       | type_specifier declaration_specifiers
   16                       | type_specifier_node
   17                       | type_specifier_node declaration_specifiers
   18                       | type_qualifier
   19                       | type_qualifier declaration_specifiers

   20 init_declarator_list: init_declarator
   21                     | init_declarator_list ',' init_declarator

   22 init_declarator: declarator
   23                | declarator '=' initializer

   24 initializer: assignment_expression

   25 storage_class_specifier: TYPEDEF
   26                        | EXTERN
   27                        | STATIC
   28                        | AUTO
   29                        | REGISTER

   30 type_specifier: VOID
   31               | CHAR
   32               | SHORT
   33               | INT
   34               | LONG
   35               | FLOAT
   36               | DOUBLE
   37               | SIGNED
   38               | UNSIGNED

   39 type_specifier_node: struct_or_union_specifier
   40                    | enum_specifier

   41 type_qualifier: CONST
   42               | VOLATILE

   43 struct_or_union_specifier: struct_or_union C_IDENTIFIER '{' struct_declaration_list '}'
   44                          | struct_or_union '{' struct_declaration_list '}'
   45                          | struct_or_union C_IDENTIFIER

   46 struct_or_union: STRUCT
   47                | UNION

   48 struct_declaration_list: struct_declaration
   49                        | struct_declaration_list struct_declaration

   50 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   51 specifier_qualifier_list: type_specifier specifier_qualifier_list
   52                         | type_specifier
   53                         | type_qualifier specifier_qualifier_list
   54                         | type_qualifier

   55 struct_declarator_list: struct_declarator
   56                       | struct_declarator_list ',' struct_declarator

   57 struct_declarator: declarator
   58                  | ':' constant_expression
   59                  | declarator ':' constant_expression

   60 enum_specifier: ENUM '{' enumerator_list '}'
   61               | ENUM C_IDENTIFIER '{' enumerator_list '}'

   62 enumerator_list: enumerator
   63                | enumerator_list ',' enumerator

   64 enumerator: C_IDENTIFIER
   65           | C_IDENTIFIER '=' constant_expression

   66 constant_expression: conditional_expression

   67 conditional_expression: logical_or_expression
   68                       | logical_or_expression '?' expression ':' conditional_expression

   69 expression: assignment_expression
   70           | expression ',' assignment_expression

   71 unary_expression: postfix_expression
   72                 | INC_OP unary_expression
   73                 | DEC_OP unary_expression
   74                 | unary_operator cast_expression
   75                 | SIZEOF unary_expression
   76                 | SIZEOF '(' type_name ')'

   77 unary_operator: '&'
   78               | '*'
   79               | '+'
   80               | '-'
   81               | '~'
   82               | '!'

   83 cast_expression: unary_expression
   84                | '(' type_name ')' cast_expression

   85 assignment_operator: '='
   86                    | RIGHT_ASSIGN
   87                    | LEFT_ASSIGN
   88                    | ADD_ASSIGN
   89                    | SUB_ASSIGN
   90                    | MUL_ASSIGN
   91                    | DIV_ASSIGN
   92                    | MOD_ASSIGN
   93                    | AND_ASSIGN
   94                    | XOR_ASSIGN
   95                    | OR_ASSIGN

   96 inclusive_or_expression: exclusive_or_expression
   97                        | inclusive_or_expression '|' exclusive_or_expression

   98 logical_or_expression: logical_and_expression
   99                      | logical_or_expression OR_OP logical_and_expression

  100 logical_and_expression: inclusive_or_expression
  101                       | logical_and_expression AND_OP inclusive_or_expression

  102 type_name: specifier_qualifier_list
  103          | specifier_qualifier_list abstract_declarator

  104 postfix_expression: primary_expression
  105                   | postfix_expression '[' expression ']'
  106                   | postfix_expression '(' ')'
  107                   | postfix_expression '(' argument_expression_list ')'
  108                   | postfix_expression '(' expression ')'
  109                   | postfix_expression '.' C_IDENTIFIER
  110                   | postfix_expression PTR_OP C_IDENTIFIER
  111                   | postfix_expression INC_OP
  112                   | postfix_expression DEC_OP

  113 primary_expression: C_IDENTIFIER
  114                   | INT_CONSTANT
  115                   | FLOAT_CONST
  116                   | CHAR_CONST
  117                   | '(' expression ')'

  118 argument_expression_list: assignment_expression
  119                         | argument_expression_list ',' assignment_expression

  120 assignment_expression: conditional_expression
  121                      | unary_expression assignment_operator assignment_expression

  122 declarator: pointer direct_declarator
  123           | direct_declarator

  124 direct_declarator: C_IDENTIFIER
  125                  | '(' declarator ')'
  126                  | direct_declarator '[' constant_expression ']'
  127                  | direct_declarator '[' ']'
  128                  | direct_declarator '(' parameter_list ')'
  129                  | direct_declarator '(' identifier_list ')'
  130                  | direct_declarator '(' ')'

  131 pointer: '*'
  132        | '*' type_qualifier_list
  133        | '*' pointer
  134        | '*' type_qualifier_list pointer

  135 type_qualifier_list: type_qualifier
  136                    | type_qualifier_list type_qualifier

  137 type_qualifier: CONST
  138               | VOLATILE

  139 parameter_type_list: parameter_list
  140                    | parameter_list ',' ELLIPSIS

  141 parameter_list: parameter_declaration
  142               | parameter_list ',' parameter_declaration

  143 parameter_declaration: declaration_specifiers declarator
  144                      | declaration_specifiers abstract_declarator
  145                      | declaration_specifiers

  146 abstract_declarator: pointer
  147                    | direct_abstract_declarator
  148                    | pointer direct_abstract_declarator

  149 direct_abstract_declarator: '(' abstract_declarator ')'
  150                           | '[' ']'
  151                           | '[' constant_expression ']'
  152                           | direct_abstract_declarator '[' ']'
  153                           | direct_abstract_declarator '[' constant_expression ']'
  154                           | '(' ')'
  155                           | '(' parameter_type_list ')'
  156                           | direct_abstract_declarator '(' ')'
  157                           | direct_abstract_declarator '(' parameter_type_list ')'

  158 identifier_list: C_IDENTIFIER
  159                | identifier_list ',' C_IDENTIFIER

  160 statement: labeled_statement
  161          | compound_statement
  162          | expression_statement
  163          | selection_statement
  164          | iteration_statement
  165          | jump_statement

  166 labeled_internal: compound_statement
  167                 | expression_statement
  168                 | selection_statement
  169                 | iteration_statement
  170                 | jump_statement

  171 labeled_internal_list: labeled_internal
  172                      | labeled_internal_list labeled_internal

  173 labeled_statement: labeled_statement_name ':' labeled_internal_list
  174                  | labeled_statement_name constant_expression ':' labeled_internal_list
  175                  | labeled_statement_name ':' labeled_internal_list

  176 labeled_statement_name: C_IDENTIFIER
  177                       | DEFAULT
  178                       | CASE

  179 compound_statement: '{' '}'
  180                   | '{' statement_list '}'
  181                   | '{' declaration_list '}'
  182                   | '{' declaration_list statement_list '}'

  183 declaration_list: declaration
  184                 | declaration_list declaration

  185 statement_list: statement
  186               | statement_list statement

  187 expression_statement: ';'
  188                     | expression ';'

  189 selection_statement: IF '(' expression ')' statement
  190                    | IF '(' expression ')' statement ELSE statement
  191                    | SWITCH '(' expression ')' statement

  192 iteration_statement: WHILE '(' expression ')' statement
  193                    | DO statement WHILE '(' expression ')' ';'
  194                    | FOR '(' expression_statement expression_statement ')' statement
  195                    | FOR '(' expression_statement expression_statement expression ')' statement

  196 jump_statement: GOTO C_IDENTIFIER ';'
  197               | CONTINUE ';'
  198               | BREAK ';'
  199               | RETURN ';'
  200               | RETURN '(' expression ')' ';'
  201               | RETURN expression ';'

  202 multiplicative_expression: unary_expression
  203                          | multiplicative_expression '*' unary_expression
  204                          | multiplicative_expression '/' unary_expression
  205                          | multiplicative_expression '%' unary_expression

  206 additive_expression: multiplicative_expression
  207                    | additive_expression '+' multiplicative_expression
  208                    | additive_expression '-' multiplicative_expression

  209 shift_expression: additive_expression
  210                 | shift_expression LEFT_OP additive_expression
  211                 | shift_expression RIGHT_OP additive_expression

  212 relational_expression: shift_expression
  213                      | relational_expression '<' shift_expression
  214                      | relational_expression '>' shift_expression
  215                      | relational_expression LE_OP shift_expression
  216                      | relational_expression GE_OP shift_expression

  217 equality_expression: relational_expression
  218                    | equality_expression EQ_OP relational_expression
  219                    | equality_expression NE_OP relational_expression

  220 and_expression: equality_expression
  221               | and_expression '&' equality_expression

  222 exclusive_or_expression: and_expression
  223                        | exclusive_or_expression '^' and_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 82
'%' (37) 205
'&' (38) 77 221
'(' (40) 76 84 106 107 108 117 125 128 129 130 149 154 155 156 157
    189 190 191 192 193 194 195 200
')' (41) 76 84 106 107 108 117 125 128 129 130 149 154 155 156 157
    189 190 191 192 193 194 195 200
'*' (42) 78 131 132 133 134 203
'+' (43) 79 207
',' (44) 21 56 63 70 119 140 142 159
'-' (45) 80 208
'.' (46) 109
'/' (47) 204
':' (58) 58 59 68 173 174 175
';' (59) 9 10 11 50 187 188 193 196 197 198 199 200 201
'<' (60) 213
'=' (61) 23 65 85
'>' (62) 214
'?' (63) 68
'[' (91) 105 126 127 150 151 152 153
']' (93) 105 126 127 150 151 152 153
'^' (94) 223
'{' (123) 43 44 60 61 179 180 181 182
'|' (124) 97
'}' (125) 43 44 60 61 179 180 181 182
'~' (126) 81
error (256)
C_IDENTIFIER (258) 43 45 61 64 65 109 110 113 124 158 159 176 196
INT_CONSTANT (259) 114
FLOAT_CONST (260) 115
CHAR_CONST (261) 116
SIZEOF (262) 75 76
PTR_OP (263) 110
INC_OP (264) 72 111
DEC_OP (265) 73 112
LEFT_OP (266) 210
RIGHT_OP (267) 211
LE_OP (268) 215
GE_OP (269) 216
EQ_OP (270) 218
NE_OP (271) 219
AND_OP (272) 101
OR_OP (273) 99
MUL_ASSIGN (274) 90
DIV_ASSIGN (275) 91
MOD_ASSIGN (276) 92
ADD_ASSIGN (277) 88
SUB_ASSIGN (278) 89
LEFT_ASSIGN (279) 87
RIGHT_ASSIGN (280) 86
AND_ASSIGN (281) 93
XOR_ASSIGN (282) 94
OR_ASSIGN (283) 95
TYPEDEF (284) 25
EXTERN (285) 26
STATIC (286) 27
AUTO (287) 28
REGISTER (288) 29
CHAR (289) 31
SHORT (290) 32
INT (291) 33
LONG (292) 34
SIGNED (293) 37
UNSIGNED (294) 38
FLOAT (295) 35
DOUBLE (296) 36
CONST (297) 41 137
VOLATILE (298) 42 138
VOID (299) 30
STRUCT (300) 46
UNION (301) 47
ENUM (302) 60 61
ELLIPSIS (303) 140
CASE (304) 178
DEFAULT (305) 177
IF (306) 189 190
ELSE (307) 190
SWITCH (308) 191
WHILE (309) 192 193
DO (310) 193
FOR (311) 194 195
GOTO (312) 196
CONTINUE (313) 197
BREAK (314) 198
RETURN (315) 199 200 201


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
translation_unit (86)
    on left: 1 2, on right: 0 2
external_declaration (87)
    on left: 3 4, on right: 1 2
function_definition (88)
    on left: 5 6 7 8, on right: 3
declaration (89)
    on left: 9 10 11, on right: 4 183 184
declaration_specifiers (90)
    on left: 12 13 14 15 16 17 18 19, on right: 5 6 9 10 13 15 17 19
    143 144 145
init_declarator_list (91)
    on left: 20 21, on right: 10 11 21
init_declarator (92)
    on left: 22 23, on right: 20 21
initializer (93)
    on left: 24, on right: 23
storage_class_specifier (94)
    on left: 25 26 27 28 29, on right: 12 13
type_specifier (95)
    on left: 30 31 32 33 34 35 36 37 38, on right: 14 15 51 52
type_specifier_node (96)
    on left: 39 40, on right: 16 17
type_qualifier (97)
    on left: 41 42 137 138, on right: 18 19 53 54 135 136
struct_or_union_specifier (98)
    on left: 43 44 45, on right: 39
struct_or_union (99)
    on left: 46 47, on right: 43 44 45
struct_declaration_list (100)
    on left: 48 49, on right: 43 44 49
struct_declaration (101)
    on left: 50, on right: 48 49
specifier_qualifier_list (102)
    on left: 51 52 53 54, on right: 50 51 53 102 103
struct_declarator_list (103)
    on left: 55 56, on right: 50 56
struct_declarator (104)
    on left: 57 58 59, on right: 55 56
enum_specifier (105)
    on left: 60 61, on right: 40
enumerator_list (106)
    on left: 62 63, on right: 60 61 63
enumerator (107)
    on left: 64 65, on right: 62 63
constant_expression (108)
    on left: 66, on right: 58 59 65 126 151 153 174
conditional_expression (109)
    on left: 67 68, on right: 66 68 120
expression (110)
    on left: 69 70, on right: 68 70 105 108 117 188 189 190 191 192
    193 195 200 201
unary_expression (111)
    on left: 71 72 73 74 75 76, on right: 72 73 75 83 121 202 203 204
    205
unary_operator (112)
    on left: 77 78 79 80 81 82, on right: 74
cast_expression (113)
    on left: 83 84, on right: 74 84
assignment_operator (114)
    on left: 85 86 87 88 89 90 91 92 93 94 95, on right: 121
inclusive_or_expression (115)
    on left: 96 97, on right: 97 100 101
logical_or_expression (116)
    on left: 98 99, on right: 67 68 99
logical_and_expression (117)
    on left: 100 101, on right: 98 99 101
type_name (118)
    on left: 102 103, on right: 76 84
postfix_expression (119)
    on left: 104 105 106 107 108 109 110 111 112, on right: 71 105
    106 107 108 109 110 111 112
primary_expression (120)
    on left: 113 114 115 116 117, on right: 104
argument_expression_list (121)
    on left: 118 119, on right: 107 119
assignment_expression (122)
    on left: 120 121, on right: 24 69 70 118 119 121
declarator (123)
    on left: 122 123, on right: 5 6 7 8 22 23 57 59 125 143
direct_declarator (124)
    on left: 124 125 126 127 128 129 130, on right: 122 123 126 127
    128 129 130
pointer (125)
    on left: 131 132 133 134, on right: 122 133 134 146 148
type_qualifier_list (126)
    on left: 135 136, on right: 132 134 136
parameter_type_list (127)
    on left: 139 140, on right: 155 157
parameter_list (128)
    on left: 141 142, on right: 5 7 128 139 140 142
parameter_declaration (129)
    on left: 143 144 145, on right: 141 142
abstract_declarator (130)
    on left: 146 147 148, on right: 103 144 149
direct_abstract_declarator (131)
    on left: 149 150 151 152 153 154 155 156 157, on right: 147 148
    152 153 156 157
identifier_list (132)
    on left: 158 159, on right: 129 159
statement (133)
    on left: 160 161 162 163 164 165, on right: 185 186 189 190 191
    192 193 194 195
labeled_internal (134)
    on left: 166 167 168 169 170, on right: 171 172
labeled_internal_list (135)
    on left: 171 172, on right: 172 173 174 175
labeled_statement (136)
    on left: 173 174 175, on right: 160
labeled_statement_name (137)
    on left: 176 177 178, on right: 173 174 175
compound_statement (138)
    on left: 179 180 181 182, on right: 5 6 7 8 161 166
declaration_list (139)
    on left: 183 184, on right: 181 182 184
statement_list (140)
    on left: 185 186, on right: 180 182 186
expression_statement (141)
    on left: 187 188, on right: 162 167 194 195
selection_statement (142)
    on left: 189 190 191, on right: 163 168
iteration_statement (143)
    on left: 192 193 194 195, on right: 164 169
jump_statement (144)
    on left: 196 197 198 199 200 201, on right: 165 170
multiplicative_expression (145)
    on left: 202 203 204 205, on right: 203 204 205 206 207 208
additive_expression (146)
    on left: 206 207 208, on right: 207 208 209 210 211
shift_expression (147)
    on left: 209 210 211, on right: 210 211 212 213 214 215 216
relational_expression (148)
    on left: 212 213 214 215 216, on right: 213 214 215 216 217 218
    219
equality_expression (149)
    on left: 217 218 219, on right: 218 219 220 221
and_expression (150)
    on left: 220 221, on right: 221 222 223
exclusive_or_expression (151)
    on left: 222 223, on right: 96 97 223


State 0

    0 $accept: . translation_unit $end

    C_IDENTIFIER  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    translation_unit           go to state 23
    external_declaration       go to state 24
    function_definition        go to state 25
    declaration                go to state 26
    declaration_specifiers     go to state 27
    init_declarator_list       go to state 28
    init_declarator            go to state 29
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    type_specifier_node        go to state 32
    type_qualifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    declarator                 go to state 37
    direct_declarator          go to state 38
    pointer                    go to state 39


State 1

  124 direct_declarator: C_IDENTIFIER .

    $default  reduce using rule 124 (direct_declarator)


State 2

   25 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 25 (storage_class_specifier)


State 3

   26 storage_class_specifier: EXTERN .

    $default  reduce using rule 26 (storage_class_specifier)


State 4

   27 storage_class_specifier: STATIC .

    $default  reduce using rule 27 (storage_class_specifier)


State 5

   28 storage_class_specifier: AUTO .

    $default  reduce using rule 28 (storage_class_specifier)


State 6

   29 storage_class_specifier: REGISTER .

    $default  reduce using rule 29 (storage_class_specifier)


State 7

   31 type_specifier: CHAR .

    $default  reduce using rule 31 (type_specifier)


State 8

   32 type_specifier: SHORT .

    $default  reduce using rule 32 (type_specifier)


State 9

   33 type_specifier: INT .

    $default  reduce using rule 33 (type_specifier)


State 10

   34 type_specifier: LONG .

    $default  reduce using rule 34 (type_specifier)


State 11

   37 type_specifier: SIGNED .

    $default  reduce using rule 37 (type_specifier)


State 12

   38 type_specifier: UNSIGNED .

    $default  reduce using rule 38 (type_specifier)


State 13

   35 type_specifier: FLOAT .

    $default  reduce using rule 35 (type_specifier)


State 14

   36 type_specifier: DOUBLE .

    $default  reduce using rule 36 (type_specifier)


State 15

   41 type_qualifier: CONST .
  137               | CONST .

    C_IDENTIFIER  reduce using rule 41 (type_qualifier)
    C_IDENTIFIER  [reduce using rule 137 (type_qualifier)]
    TYPEDEF       reduce using rule 41 (type_qualifier)
    TYPEDEF       [reduce using rule 137 (type_qualifier)]
    EXTERN        reduce using rule 41 (type_qualifier)
    EXTERN        [reduce using rule 137 (type_qualifier)]
    STATIC        reduce using rule 41 (type_qualifier)
    STATIC        [reduce using rule 137 (type_qualifier)]
    AUTO          reduce using rule 41 (type_qualifier)
    AUTO          [reduce using rule 137 (type_qualifier)]
    REGISTER      reduce using rule 41 (type_qualifier)
    REGISTER      [reduce using rule 137 (type_qualifier)]
    CHAR          reduce using rule 41 (type_qualifier)
    CHAR          [reduce using rule 137 (type_qualifier)]
    SHORT         reduce using rule 41 (type_qualifier)
    SHORT         [reduce using rule 137 (type_qualifier)]
    INT           reduce using rule 41 (type_qualifier)
    INT           [reduce using rule 137 (type_qualifier)]
    LONG          reduce using rule 41 (type_qualifier)
    LONG          [reduce using rule 137 (type_qualifier)]
    SIGNED        reduce using rule 41 (type_qualifier)
    SIGNED        [reduce using rule 137 (type_qualifier)]
    UNSIGNED      reduce using rule 41 (type_qualifier)
    UNSIGNED      [reduce using rule 137 (type_qualifier)]
    FLOAT         reduce using rule 41 (type_qualifier)
    FLOAT         [reduce using rule 137 (type_qualifier)]
    DOUBLE        reduce using rule 41 (type_qualifier)
    DOUBLE        [reduce using rule 137 (type_qualifier)]
    CONST         reduce using rule 41 (type_qualifier)
    CONST         [reduce using rule 137 (type_qualifier)]
    VOLATILE      reduce using rule 41 (type_qualifier)
    VOLATILE      [reduce using rule 137 (type_qualifier)]
    VOID          reduce using rule 41 (type_qualifier)
    VOID          [reduce using rule 137 (type_qualifier)]
    STRUCT        reduce using rule 41 (type_qualifier)
    STRUCT        [reduce using rule 137 (type_qualifier)]
    UNION         reduce using rule 41 (type_qualifier)
    UNION         [reduce using rule 137 (type_qualifier)]
    ENUM          reduce using rule 41 (type_qualifier)
    ENUM          [reduce using rule 137 (type_qualifier)]
    ';'           reduce using rule 41 (type_qualifier)
    ';'           [reduce using rule 137 (type_qualifier)]
    ','           reduce using rule 41 (type_qualifier)
    ','           [reduce using rule 137 (type_qualifier)]
    '{'           reduce using rule 41 (type_qualifier)
    '{'           [reduce using rule 137 (type_qualifier)]
    ':'           reduce using rule 41 (type_qualifier)
    ':'           [reduce using rule 137 (type_qualifier)]
    '('           reduce using rule 41 (type_qualifier)
    '('           [reduce using rule 137 (type_qualifier)]
    ')'           reduce using rule 41 (type_qualifier)
    ')'           [reduce using rule 137 (type_qualifier)]
    '*'           reduce using rule 41 (type_qualifier)
    '*'           [reduce using rule 137 (type_qualifier)]
    '['           reduce using rule 41 (type_qualifier)
    '['           [reduce using rule 137 (type_qualifier)]
    $default      reduce using rule 41 (type_qualifier)


State 16

   42 type_qualifier: VOLATILE .
  138               | VOLATILE .

    C_IDENTIFIER  reduce using rule 42 (type_qualifier)
    C_IDENTIFIER  [reduce using rule 138 (type_qualifier)]
    TYPEDEF       reduce using rule 42 (type_qualifier)
    TYPEDEF       [reduce using rule 138 (type_qualifier)]
    EXTERN        reduce using rule 42 (type_qualifier)
    EXTERN        [reduce using rule 138 (type_qualifier)]
    STATIC        reduce using rule 42 (type_qualifier)
    STATIC        [reduce using rule 138 (type_qualifier)]
    AUTO          reduce using rule 42 (type_qualifier)
    AUTO          [reduce using rule 138 (type_qualifier)]
    REGISTER      reduce using rule 42 (type_qualifier)
    REGISTER      [reduce using rule 138 (type_qualifier)]
    CHAR          reduce using rule 42 (type_qualifier)
    CHAR          [reduce using rule 138 (type_qualifier)]
    SHORT         reduce using rule 42 (type_qualifier)
    SHORT         [reduce using rule 138 (type_qualifier)]
    INT           reduce using rule 42 (type_qualifier)
    INT           [reduce using rule 138 (type_qualifier)]
    LONG          reduce using rule 42 (type_qualifier)
    LONG          [reduce using rule 138 (type_qualifier)]
    SIGNED        reduce using rule 42 (type_qualifier)
    SIGNED        [reduce using rule 138 (type_qualifier)]
    UNSIGNED      reduce using rule 42 (type_qualifier)
    UNSIGNED      [reduce using rule 138 (type_qualifier)]
    FLOAT         reduce using rule 42 (type_qualifier)
    FLOAT         [reduce using rule 138 (type_qualifier)]
    DOUBLE        reduce using rule 42 (type_qualifier)
    DOUBLE        [reduce using rule 138 (type_qualifier)]
    CONST         reduce using rule 42 (type_qualifier)
    CONST         [reduce using rule 138 (type_qualifier)]
    VOLATILE      reduce using rule 42 (type_qualifier)
    VOLATILE      [reduce using rule 138 (type_qualifier)]
    VOID          reduce using rule 42 (type_qualifier)
    VOID          [reduce using rule 138 (type_qualifier)]
    STRUCT        reduce using rule 42 (type_qualifier)
    STRUCT        [reduce using rule 138 (type_qualifier)]
    UNION         reduce using rule 42 (type_qualifier)
    UNION         [reduce using rule 138 (type_qualifier)]
    ENUM          reduce using rule 42 (type_qualifier)
    ENUM          [reduce using rule 138 (type_qualifier)]
    ';'           reduce using rule 42 (type_qualifier)
    ';'           [reduce using rule 138 (type_qualifier)]
    ','           reduce using rule 42 (type_qualifier)
    ','           [reduce using rule 138 (type_qualifier)]
    '{'           reduce using rule 42 (type_qualifier)
    '{'           [reduce using rule 138 (type_qualifier)]
    ':'           reduce using rule 42 (type_qualifier)
    ':'           [reduce using rule 138 (type_qualifier)]
    '('           reduce using rule 42 (type_qualifier)
    '('           [reduce using rule 138 (type_qualifier)]
    ')'           reduce using rule 42 (type_qualifier)
    ')'           [reduce using rule 138 (type_qualifier)]
    '*'           reduce using rule 42 (type_qualifier)
    '*'           [reduce using rule 138 (type_qualifier)]
    '['           reduce using rule 42 (type_qualifier)
    '['           [reduce using rule 138 (type_qualifier)]
    $default      reduce using rule 42 (type_qualifier)


State 17

   30 type_specifier: VOID .

    $default  reduce using rule 30 (type_specifier)


State 18

   46 struct_or_union: STRUCT .

    $default  reduce using rule 46 (struct_or_union)


State 19

   47 struct_or_union: UNION .

    $default  reduce using rule 47 (struct_or_union)


State 20

   60 enum_specifier: ENUM . '{' enumerator_list '}'
   61               | ENUM . C_IDENTIFIER '{' enumerator_list '}'

    C_IDENTIFIER  shift, and go to state 40
    '{'           shift, and go to state 41


State 21

  125 direct_declarator: '(' . declarator ')'

    C_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    declarator         go to state 42
    direct_declarator  go to state 38
    pointer            go to state 39


State 22

  131 pointer: '*' .
  132        | '*' . type_qualifier_list
  133        | '*' . pointer
  134        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 22

    $default  reduce using rule 131 (pointer)

    type_qualifier       go to state 43
    pointer              go to state 44
    type_qualifier_list  go to state 45


State 23

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end          shift, and go to state 46
    C_IDENTIFIER  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    external_declaration       go to state 47
    function_definition        go to state 25
    declaration                go to state 26
    declaration_specifiers     go to state 27
    init_declarator_list       go to state 28
    init_declarator            go to state 29
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    type_specifier_node        go to state 32
    type_qualifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    declarator                 go to state 37
    direct_declarator          go to state 38
    pointer                    go to state 39


State 24

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 25

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 26

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 27

    5 function_definition: declaration_specifiers . declarator parameter_list compound_statement
    6                    | declaration_specifiers . declarator compound_statement
    9 declaration: declaration_specifiers . ';'
   10            | declaration_specifiers . init_declarator_list ';'

    C_IDENTIFIER  shift, and go to state 1
    ';'           shift, and go to state 48
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    init_declarator_list  go to state 49
    init_declarator       go to state 29
    declarator            go to state 50
    direct_declarator     go to state 38
    pointer               go to state 39


State 28

   11 declaration: init_declarator_list . ';'
   21 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 51
    ','  shift, and go to state 52


State 29

   20 init_declarator_list: init_declarator .

    $default  reduce using rule 20 (init_declarator_list)


State 30

   12 declaration_specifiers: storage_class_specifier .
   13                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 12 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    type_specifier_node        go to state 32
    type_qualifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36


State 31

   14 declaration_specifiers: type_specifier .
   15                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 14 (declaration_specifiers)

    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    type_specifier_node        go to state 32
    type_qualifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36


State 32

   16 declaration_specifiers: type_specifier_node .
   17                       | type_specifier_node . declaration_specifiers
